added and enabled oh my zsh on fastapi container

--- a/docker/python/Dockerfile
+++ b/docker/python/Dockerfile
@@ -4,8 +4,10 @@ WORKDIR /code
 
 COPY ./requirements.txt /code/requirements.txt
 
-RUN apt update && apt install -y git curl vim wget && \
-    git config --global core.editor vim
+RUN apt update && apt install -y git curl vim wget zsh && \
+    git config --global core.editor vim && \
+    chsh -s /bin/zsh root && \
+    sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)" "" --unattended
 RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
 
 CMD ["fastapi", "run", "app/main.py", "--port", "8080"]
