--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
-fastapi[standard]>=0.119.0,<0.120.0
+fastapi[standard]>=0.119.0
 pydantic>=2.12.0
 sqlmodel>=0.0.27
+alembic>=1.17.0
+python-lsp-server[all]
+pylsp-mypy
+python-lsp-black
+python-lsp-isort
