--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,7 @@ services:
     volumes:
       - .:/code
       - ~/.ssh:/root/.ssh # mount ssh keys for git access
+      - ~/.gitconfig:/root/.gitconfig
   
   db:
     image: postgres:18
