--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 fastapi[standard]>=0.119.0
 pydantic>=2.12.0
-sqlmodel>=0.0.27
+sqlalchemy>=2.0.0
 alembic>=1.17.0
 python-lsp-server[all]
 pylsp-mypy
