added adminer service on port 5050 in the docker-compose.yaml file

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,6 +20,11 @@ services:
       - "5432:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
+  adminer:
+    image: adminer:5
+    restart: always
+    ports:
+      - 5050:8080
 
 volumes:
   pgdata:
