--- a/docker/python/Dockerfile
+++ b/docker/python/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3
 
 WORKDIR /code
 
-COPY ./requirements.txt /code/requirements.txt
+COPY ./ /code/
 
 RUN apt update && apt install -y git curl vim wget zsh && \
     git config --global core.editor vim && \
@@ -11,7 +11,7 @@ RUN apt update && apt install -y git curl vim wget zsh && \
     echo 'alias fastapi-dev="fastapi dev /code/app/main.py --port 8080 --host 0.0.0.0"' >> /root/.zshrc && \
     echo 'alias fastapi-prod="fastapi run /code/app/main.py --port 8080 --host 0.0.0.0"' >> /root/.zshrc
 
-RUN pip install poetry && pip install --no-cache-dir --upgrade -r /code/requirements.txt && \
+RUN pip install poetry && \
     poetry install --all-extras
 
 CMD ["tail", "-f", "/dev/null"]
