--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "Hari S3ldon",email = "enrico.pascucci@gmail.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.14"
+requires-python = ">=3.11"
 dependencies = [
     "fastapi[standard] (>=0.119.0)",
     "pydantic (>=2.12.0)",
@@ -19,15 +19,15 @@ dependencies = [
     "pylsp-mypy (>=0.7.0,<0.8.0)",
     "python-lsp-black (>=2.0.0,<3.0.0)",
     "python-lsp-isort (>=0.2.1,<0.3.0)",
-    "python-dotenv (>=1.2.1,<2.0.0)"
+    "python-dotenv (>=1.2.1,<2.0.0)",
+    "psycopg2-binary (>=2.9.11,<3.0.0)",
+    "python-jose (>=3.5.0,<4.0.0)"
 ]
 
-[project.optional-dependencies]
-dev = [
-    "pytest (>=7.0.0)",
-    "httpx (>=0.23.0)",
-    "pytest-asyncio (>=0.18.0)"
-]
+[tool.poetry.group.dev.dependencies]
+pytest = ">=7.0.0"
+httpx = ">=0.23.0"
+pytest-asyncio = ">=0.18.0"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
